<resources>
    <string name="app_name">TicketGo</string>

    <!-- Signup -->
    <string name="tv_sign_up_title">Create a TicketGO Account</string>
    <string name="tv_step_1">Step 1 of 3</string>
    <string name="tv_step_2">Step 2 of 3</string>
    <string name="tv_step_3">Step 3 of 3</string>
    <string name="tv_email_address">Email Address</string>
    <string name="tv_password">Password</string>
    <string name="tv_password_requirements_label">Your password must:</string>
    <string name="tv_password_requirements">Include between 8 and 64 characters\nInclude at least 1 number and letter</string>
    <string name="tv_first_name">First Name</string>
    <string name="tv_last_name">Last Name</string>
    <string name="tv_phone_number">Phone Number</string>
    <string name="tv_address">Address</string>
    <string name="tv_zip_code">Zip Code</string>
    <string name="tv_city">City</string>
    <string name="tv_country">Country</string>
    <string name="tv_toc_label">Terms and Conditions</string>
    <string name="tv_toc_description">We use your information to provide you with our services, which we personalise based on information we hold about you and how you interact with us. Please see our <b>Privacy Policy</b> for full details. As a registered user of TicketGO, you are also subject to the <b>Terms of Use</b>.</string>
    <string name="tv_toc_required">I agree to the Terms of Use and Terms of Purchase.</string>

    <!-- Login -->

    <string name="tv_don_t_have_an_account">Don\'t have an account?</string>
    <string name="tv_create_one_now">Create one now!</string>

    <!-- Titles for BottomNavigationView -->
    <string name="title_home">Home</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_profile">Profile</string>

    <!-- Profile -->
    <string name="tv_hi_there">Hi there!</string>
    <string name="btn_log_out">Log out</string>
    <string name="tv_personal_information">Personal Information</string>
    <string name="tv_email_description">Your email address is your account username, use it to log in, manage your account and receive e-tickets and ticket updates.</string>

    <!-- Tickets -->
    <string name="iv_event_picture_description">Event Picture</string>
    <string name="iv_qr_contentdescription">QR Code</string>

    <!-- Buttons -->
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_log_in">Log in</string>
    <string name="btn_create_an_account">Create an account</string>

    <!-- QR AlertDialog -->
    <string name="qr_title">QR Code</string>
    <string name="ticket_id">Ticket ID:</string>

</resources>